# url-album-2

./: .gitignore  CLAUDE.md  Cargo.toml  DECISIONS.md  FEATURES.md  PROJECT_CONTEXT.md  README.md  TODO.md  build.rs  monitor-ruboard.ps1  package.json  release_notes.md  ru-board-report.md  snap.py
.cargo/: config.toml
docs/superpowers/plans/: 2026-05-15-favicon-loading.md  2026-05-19-batch-thumb-refresh.md  2026-05-19-menu-restructure.md
docs/superpowers/specs/: 2026-05-15-favicon-design.md  2026-05-19-batch-thumb-refresh-design.md
src/: compat.rs  db.rs  main.rs  net.rs  platform.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  importer.rs  main.rs
tools/pe-patch/: Cargo.toml
tools/pe-patch/.cargo/: config.toml
tools/pe-patch/src/: main.rs
ui/: app.js  index.html  main_window.slint  style.css
