[package]
name = "url-album-3"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "url-album-3"
path = "src/main.rs"

[dependencies]
slint = "1.7"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding_rs = "0.8"
rfd = "0.14"

[build-dependencies]
slint-build = "1.7"

[profile.release]
opt-level = 3
lto = true
strip = true
