[package]
name = "url-album-3"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "url-album-3"
path = "src/main.rs"

[dependencies]
slint = "1.7"
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding_rs = "0.8"
rfd = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
slint-build = "1.7"
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
strip = true
