[package]
name = "url-album"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri       = { version = "2", features = ["protocol-asset"] }
rusqlite    = { version = "0.31", features = ["bundled"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
encoding_rs = "0.8"
rfd         = "0.15"
reqwest     = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[profile.release]
panic         = "abort"
codegen-units = 1
lto           = true
strip         = true
